REOPENED253101
Block access to updateQuotaBasedOnSpaceUsageForTesting when not testing
https://bugs.webkit.org/show_bug.cgi?id=253101
Summary Block access to updateQuotaBasedOnSpaceUsageForTesting when not testing
Gavin
Reported 2023-02-28 12:56:00 PST
Block access to updateQuotaBasedOnSpaceUsageForTesting when not testing
Attachments
Gavin
Comment 1 2023-02-28 12:58:31 PST
Radar WebKit Bug Importer
Comment 2 2023-03-01 03:32:33 PST
EWS
Comment 3 2023-03-01 05:23:43 PST
Committed 261000@main (eb0336c1fd2b): <https://commits.webkit.org/261000@main> Reviewed commits have been landed. Closing PR #10817 and removing active labels.
Robert Jenner
Comment 4 2023-04-03 17:49:58 PDT
(In reply to EWS from comment #3) > Committed 261000@main (eb0336c1fd2b): > <https://commits.webkit.org/261000@main> > > Reviewed commits have been landed. Closing PR #10817 and removing active > labels. ipc/restrictedendpoints/deny-access-updateQuotaBasedOnSpaceUsageForTesting.html ipc/restrictedendpoints/no-test-only-ipc-expected-crash.html Are crashing on Mac-WK2. An expectation has been added above for this. However, that expectation doesn't cover the "WARNING" we are seeing on Mac-WK1 observed: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=ipc%2Frestrictedendpoints%2Fdeny-access-updateQuotaBasedOnSpaceUsageForTesting.html&test=ipc%2Frestrictedendpoints%2Fno-test-only-ipc-expected-crash.html Re-opening to add a 'skip' expectation for Mac-wk1
EWS
Comment 5 2023-04-03 17:58:32 PDT
Test gardening commit 262551@main (6e4e53d03f54): <https://commits.webkit.org/262551@main> Reviewed commits have been landed. Closing PR #12351 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.