Source/WebKit/DerivedSources.make
@@ -496,6 +496,7 @@ SERIALIZATION_DESCRIPTION_FILES = \
 	Shared/LayerTreeContext.serialization.in \
 	Shared/Model.serialization.in \
 	Shared/NavigationActionData.serialization.in \
+	Shared/NetworkProcessConnectionParameters.serialization.in \
 	Shared/PALArgumentCoders.serialization.in \
 	Shared/Pasteboard.serialization.in \
 	Shared/PlatformPopupMenuData.serialization.in \
